# diff-match-patch

./: .gitignore  AUTHORS  CMakeLists.txt  CMakePresets.json  README.md  dmp.cpp  dmp.h
.github/workflows/: ci.yml
cpp/: CMakeLists.txt  diff_match_patch.cpp  diff_match_patch.h  diff_match_patch.pro  diff_match_patch_test.cpp  diff_match_patch_test.h
cpp-tests/: CMakeLists.txt
tests/: CMakeLists.txt  dmp_test.cpp
